# socket-communication-lib

./: CMakeLists.txt  LICENSE  README.md  debug.sh  run.sh
example/: main.cpp
include/: logger.h  server.h
src/: server.cpp
